@@ -452,6 +452,9 @@ Release 0.5.0 -  Unreleased
     HIVE-1039 bug in multi table/directory inserts
     (Ning Zhang via namit)
 
+    HIVE-1049. Fix ant targets "eclipse-files" and "javadoc".
+    (Carl Steinbach via zshao)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
